Fix icon vertical alignment

--- a/src/components/Icon/Icon.module.scss
+++ b/src/components/Icon/Icon.module.scss
@@ -1,13 +1,6 @@
 @import '../../styles/config';
 
-.IconWrapper {
+.Icon {
   position: relative;
-}
-
-.Backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: -1px;
 }
